# LuminanceHDR

./: .gitignore  .travis.yml  AUTHORS  BUGS  CMakeGlobal.txt  CMakeLists.txt  COPYING  CPackConfig.cmake  Changelog  CompilerChecks.cmake  DefineOptions.cmake  INSTALL  INSTALL.md  LICENSE  LOCALIZATION.md  NEWS  ProcessorTargets.cmake  README  README.i18n  README.md  TODO  build-lhdr  icons.qrc  luminance-hdr-2.5.0-qtwebkit.patch  luminance-hdr.appdata.xml  luminance-hdr.desktop  luminance-hdr.xml  luminance.desktop  net.sourceforge.qtpfsgui.LuminanceHDR.appdata.xml  net.sourceforge.qtpfsgui.LuminanceHDR.desktop  project.pro  qtpfsgui.desktop  rtprocess-config.cmake.in
librtprocess/: CMakeLists.txt  CompilerChecks.cmake  DefineOptions.cmake  README.md
librtprocess/pkgconfig/: rtprocess.pc.cmake
librtprocess/src/: CMakeLists.txt
package/: CMakeLists.txt
package/osx/: CMakeLists.txt
src/: CMakeLists.txt  LUT.h  StopWatch.h  align_impl.cpp  amaze_demosaic_RT.cc  array2D.h  border_interpolate2.cc  config.h  gamma_and_levels.cpp  gamma_and_levels.h  gang.cpp  gang.h  gauss.h  hdrviewer.cpp  hdrviewer.h  hdrwizardform_impl.cpp  hdrwizardform_impl.h  histogram.cpp  histogram.h  imagehdrviewer.cpp  imagehdrviewer.h  ldrviewer.cpp  ldrviewer.h  lhdr_gauss.h  librtprocess.h  luminancerange_widget.cpp  main.cpp  maingui_impl.cpp  maingui_impl.h  mytime.h  noncopyable.h  opthelper.h  options.cpp  options.h  options_impl.cpp  options_impl.h  panIconWidget.cpp  panIconWidget.h  rawimagesource.h  resizedialog_impl.h  (+15 more)
src/Alignment/: Align.cpp  Align.h  CMakeLists.txt
src/Batch/: BatchTMDialog.cpp  BatchTMDialog.h  BatchTMJob.cpp  BatchTMJob.h  batch_dialog.cpp  batch_dialog.h  batch_dialog_impl.cpp  batch_dialog_impl.h
src/BatchHDR/: BatchHDRDialog.cpp  BatchHDRDialog.h  BatchHDRDialog.ui  CMakeLists.txt
src/BatchTM/: BatchTMDialog.cpp  BatchTMDialog.h  BatchTMDialog.ui  BatchTMJob.cpp  BatchTMJob.h  CMakeLists.txt
src/Common/: CMakeLists.txt  CommonFunctions.cpp  CommonFunctions.h  FloatRgbToQRgb.cpp  FloatRgbToQRgb.h  GammaAndLevels.cpp  GammaAndLevels.h  Gang.cpp  Gang.h  GitSHA1.cpp.in  GitSHA1.h  ImageQualityDialog.cpp  ImageQualityDialog.h  LuminanceOptions.cpp  LuminanceOptions.h  PanIconWidget.cpp  PanIconWidget.h  ProgressHelper.cpp  ProgressHelper.h  ResourceHandler.h  ResourceHandlerCommon.h  ResourceHandlerLcms.h  SavedParametersDialog.cpp  SavedParametersDialog.h  SavedParametersDialog.ui  SelectionTool.cpp  SelectionTool.h  TranslatorManager.cpp  TranslatorManager.h  archs.h  archs.h.in  commandline.cpp  commandline.h  config.h  config.h.in  gamma_and_levels.cpp  gang.cpp  gang.h  genericViewer.cpp  genericViewer.h  (+25 more)
src/Core/: CMakeLists.txt  IOWorker.cpp  IOWorker.h  TMWorker.cpp  TMWorker.h  TonemappingOptions.cpp  TonemappingOptions.h
src/Exif/: CMakeLists.txt  ExifOperations.cpp  ExifOperations.h  exif_operations.cpp  exif_operations.h
src/Fileformat/: CMakeLists.txt  jpegreader.cpp  jpegreader.h  jpegwriter.cpp  jpegwriter.h  pfs_file_format.h  pfsindcraw.cpp  pfsindcraw.h  pfsinexr.cpp  pfsinraw.cpp  pfsinraw.h  pfsinrgbe.cpp  pfsout16bitspixmap.cpp  pfsout16bitspixmap.h  pfsoutexr.cpp  pfsouthdrimage.cpp  pfsouthdrimage.h  pfsoutldrimage.cpp  pfsoutldrimage.h  pfsoutrgbe.cpp  pfstiff.cpp  pfstiff.h  pngwriter.cpp  pngwriter.h  qimageinjpeg.cpp  qimageinjpeg.h  qimageoutjpeg.cpp  qimageoutjpeg.h  rgbeio.cpp  rgbeio.h  tiffcommon.h  tiffreader.cpp  tiffreader.h  tiffwriter.cpp  tiffwriter.h
src/Filter/: CMakeLists.txt  pfsclamp.cpp  pfscut.cpp  pfscut.h  pfsflip.cpp  pfsgamma.cpp  pfsgamma.h  pfsgammaandlevels.cpp  pfsgammaandlevels.h  pfspanoramic.cpp  pfspanoramic.h  pfsrotate.cpp  pfsrotate.h  pfssize.cpp  pfssize.h
src/HdrCreation/: CMakeLists.txt  HdrCreationManager.cpp  HdrCreationManager.h  createhdr.cpp  createhdr.h  createhdr_common.cpp  createhdr_common.h  debevec.cpp  debevec.h  fusionoperator.cpp  fusionoperator.h  generic_applyResponse.cpp  generic_applyResponse.h  icip06.cpp  icip06.h  mtb_alignment.cpp  mtb_alignment.h  responses.cpp  responses.h  robertson02.cpp  robertson02.h  weights.cpp  weights.h
src/HdrHTML/: CMakeLists.txt  hdrhtml-path.hxx.in  hdrhtml.cpp  hdrhtml.h  pfsouthdrhtml.cpp  pfsouthdrhtml.h
src/HdrWizard/: AntiGhostingWidget.cpp  AntiGhostingWidget.h  AutoAntighosting.cpp  AutoAntighosting.h  CMakeLists.txt  EditingTools.cpp  EditingTools.h  EditingTools.ui  HdrCreationItem.cpp  HdrCreationItem.h  HdrCreationManager.cpp  HdrCreationManager.h  HdrInputLoader.cpp  HdrInputLoader.h  HdrPreview.cpp  HdrPreview.h  HdrPreview.ui  HdrWizard.cpp  HdrWizard.h  HdrWizard.ui  ISelectionTool.cpp  ISelectionTool.h  PreviewWidget.cpp  PreviewWidget.h  WhiteBalance.cpp  WhiteBalance.h  editingTools.cpp  editingTools.h  hdrwizardform_impl.cpp  hdrwizardform_impl.h  newHdrWizard.cpp  newHdrWizard.h  previewWidget.cpp  previewWidget.h
src/HelpBrowser/: CMakeLists.txt  HelpBrowser.ui  HelpSideBar.cpp  HelpSideBar.h  HelpSideBar.ui  LuminancePaths.cpp  LuminancePaths.h  fmpaths.cpp  fmpaths.h  help-path.hxx.in  helpbrowser.cpp  helpbrowser.h  helpwidget.cpp  helpwidget.h  schelptreemodel.cpp  schelptreemodel.h  sctextbrowser.cpp  sctextbrowser.h  treeitem.cpp  treeitem.h  treemodel.cpp  treemodel.h
src/Libpfs/: CMakeLists.txt  args.h  array2d.cpp  array2d.h  array2d.hxx  array2d_fwd.h  channel.cpp  channel.h  channel.hxx  colorspace.cpp  colorspace.h  domio.cpp  domio.h  exception.h  fixedstrideiterator.h  frame.cpp  frame.h  params.cpp  params.h  (+13 more)
test/: CMakeLists.txt  CompareVector.h  PrintArray2D.cpp  PrintArray2D.h  SeqInt.h  TestCMYK2RGB.cpp  TestConvertSample.cpp  TestFloatRgb.cpp  TestFrameArray2D.cpp  TestFusionOperator.cpp  TestHdrCreationWizard.cpp  TestImageQualityDialog.cpp  TestMTB.cpp  TestMantiuk06.cpp  TestMantiuk06Basic.cpp  TestMantiuk06Pyramid.cpp  TestMantiuk06Reference.cpp  TestMantiuk06Reference.h  TestMinMax.cpp  TestPfsCut.cpp  TestPfsRotate.cpp  TestPfsShift.cpp  TestPoissonSolver.cpp  TestRGB2XYZ.cpp  TestRGB2Y.cpp  TestSRGB2XYZ.cpp  TestSRGB2Y.cpp  TestVex.cpp  TestVexDotProduct.cpp  TestXYZ2RGB.cpp
(+916 files in other folders)
