# Shared CPack Variables
SET(CPACK_PACKAGE_NAME "Luminance HDR")
SET(CPACK_PACKAGE_DESCRIPTION "Luminance HDR")
SET(CPACK_PACKAGE_VENDOR "Luminance HDR")
SET(CPACK_PACKAGE_CONTACT "Luminance HDR <davideanastasia@users.sourceforge.net>")
SET(CPACK_PACKAGE_INSTALL_DIRECTORY "LuminanceHDR")

# MESSAGE(STATUS "CMAKE_INSTALL_PREFIX = ${CMAKE_INSTALL_PREFIX}")

IF(APPLE)
ADD_SUBDIRECTORY(osx)
ENDIF()
